2002-11-07  Jakub Jelinek  <jakub@redhat.com>

	* string/test-string.h: New file.
	* string/test-strlen.c: New file.
	* string/test-string.h: New file.
	* string/test-strcmp.c: New file.
	* string/test-strchr.c: New file.
	* string/test-strrchr.c: New file.
	* string/test-strcpy.c: New file.
	* string/test-stpcpy.c: New file.
	* string/test-strncpy.c: New file.
	* string/test-stpncpy.c: New file.
	* string/test-strpbrk.c: New file.
	* string/test-strcspn.c: New file.
	* string/test-strspn.c: New file.
	* string/test-strcat.c: New file.
	* string/test-strncmp.c: New file.
	* string/test-memchr.c: New file.
	* string/test-memcmp.c: New file.
	* string/test-memset.c: New file.
	* string/test-memcpy.c: New file.
	* string/test-mempcpy.c: New file.
	* string/test-memmove.c: New file.
	* string/Makefile (strop-tests): New variable.
	(tests): Add strop-tests.
	(distribute): Add test-string.h.

2002-11-06  Ulrich Drepper  <drepper@redhat.com>

	* posix/regcomp.c: Use tabs instead of spaces.
	* posix/regexec.c: Likewise.
	* posix/regex_internal.h: Likewise.

	* posix/regcomp.c (re_compile_fastmap_iter): Use __wcrtomb not wctomb.

2002-11-06  Jakub Jelinek  <jakub@redhat.com>

	* posix/regcomp.c (re_compile_pattern): Don't set regs_allocated
	here.
	(regcomp): Don't set can_be_null here.
	(re_comp): Clear whole re_comp_buf with the exception of fastmap.
	(re_compile_internal): Clear can_be_null, set regs_allocated.

	* posix/regcomp.c (re_set_fastmap): New function.
	(re_compile_fastmap_iter): Use it.  Remove redundant type ==
	COMPLEX_BRACKET check.
	* posix/regexec.c (re_search_internal): Optimize searching with
	fastmap.  Call re_string_reconstruct even if match_first is
	smaller than raw_mbs_idx.

2002-11-06  Isamu Hasegawa  <isamu@yamato.ibm.com>

	* posix/regcomp (free_dfa_content): Use free_state.
	* posix/regex_internal.c (re_string_realloc_buffers): Don't edit
	pointers in case that realloc failed.
	(re_node_set_merge): Likewise.
	(register_state): Likewise.